--- a/TodoApi1.Frontend/public/index.html
+++ b/TodoApi1.Frontend/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      .root {
+        background-color: #F0F8FF;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
